Fixed header layout and styles to function better on mobile

--- a/src/styles/_header.sass
+++ b/src/styles/_header.sass
@@ -1,11 +1,13 @@
 header
 	width: 100%
 	height: 100vh
+	min-height: 400px
 	background-color: $dark-blue
 	background-image: url("../images/bg_1024.jpg")
 	background-repeat: no-repeat
 	background-size: cover
 	background-position: center
+	position: relative
 
 	#menu-icon
 		width: 30px
@@ -39,22 +41,21 @@ header
 
 	main
 		width: 275px
-		height: calc(100vh - 100px)
+		height: auto
 		margin: auto
 		color: $gray
 		text-align: center
-		padding: 100px 0 0 0	
+		position: relative
+		top: 75px	
 		.highlight
 			color: $yellow
 
 		#title
 			width: 250px
 			height: 125px
-			position: relative
 			margin: auto
 			background: linear-gradient(to right, transparent, rgba(43, 70, 106, 0.1) , transparent)
-			border: 1px solid $light-blue		
-
+			border: 1px solid $light-blue	
 			.anchor
 				width: 5px
 				height: 5px
@@ -95,14 +96,13 @@ header
 
 		#tag-line
 			position: relative
-			top: 70px
+			top: 50px
 			h2
 				font-size: 10px
 				font-family: Esphimere-Light
 				text-transform: uppercase
 				letter-spacing: 0.4em
 				color: $dark-gray
-				position: relative
 				.highlight
 					font-family: Esphimere
 			
@@ -112,145 +112,128 @@ header
 				margin: 7px auto
 				background: linear-gradient(to right, transparent, $blue, transparent)
 		
-		#learn-more
-			width: 275px
-			position: absolute
-			bottom: 50px			
-			h3
-				font-size: 10px
-				font-family: Esphimere-Light
-				text-transform: uppercase
-				letter-spacing: 0.4em
-				color: $dark-gray
-				padding-bottom: 25px
-				.highlight
-					font-family: Esphimere
+	#learn-more
+		width: 100%
+		position: absolute
+		bottom: 30px
+		text-align: center		
+		h3
+			font-size: 10px
+			font-family: Esphimere-Light
+			text-transform: uppercase
+			letter-spacing: 0.4em
+			color: $dark-gray
+			padding-bottom: 25px
+			.highlight
+				font-family: Esphimere
+				color: $yellow
 
-			#scroll-icon-mouse
-				width: 13px
-				height: 24px
-				margin: auto
+		#scroll-icon-mouse
+			width: 13px
+			height: 24px
+			margin: auto
+			position: relative
+			border-radius: 20px
+			border: 1px solid $yellow
+			animation: scroll-bounce 1500ms infinite
+
+			@keyframes scroll-bounce
+				0%
+					top: 0
+				50%
+					top: 10px
+				100%
+					top: 0
+			
+			#scroll-icon-button
+				width: 1px
+				height: 6px
 				position: relative
+				top: 13px
+				margin: auto
+				background-color: $yellow
 				border-radius: 20px
-				border: 1px solid $yellow
-				animation: scroll-bounce 1500ms infinite
-
-				@keyframes scroll-bounce
-					0%
-						top: 0
-					50%
-						top: 10px
-					100%
-						top: 0
-				
-				#scroll-icon-button
-					width: 1px
-					height: 6px
-					position: relative
-					top: 13px
-					margin: auto
-					background-color: $yellow
-					border-radius: 20px
 
 @media screen and (min-width: 375px)
 	header
 		main
-			width: 325px
-			#title
-				width: 280px
-				h1	
-					font-size: 23px			
 			#tag-line
 				top: 100px
-				h2	
-					font-size: 11px		
-			#learn-more	
-				width: 325px		
-				h3
-					font-size: 11px
 
 @media screen and (min-width: 500px)
 	header
 		main
 			width: 80%
-			height: calc(100vh - 150px)
-			padding: 150px 0 0 0
 			#title
 				width: 100%
-				height: 200px
-				#title-anchor
-					h1	
-						font-size: 23px	
-						line-height: initial		
-			#tag-line
-				padding-top: 25px
-				top: 0
-				h2	
-					font-size: 10px		
-			#learn-more	
-				width: 80%
-				h3
-					font-size: 10px
+				height: 150px
+				#tag-line
+					top: 0
+					padding-top: 25px
+	
 
 @media screen and (min-width: 650px)
 	header
+		min-height: 475px
 		main
 			#title
-				height: 250px
+				height: 220px
 				#title-anchor
-					h1	
-						font-size: 30px			
-			#tag-line
-				h2	
-					font-size: 11px		
-			#learn-more	
-				width: 80%
-				h3
-					font-size: 11px
-			
-@media screen and (min-width: 1025px)
+					h1
+						font-size: 30px
+					#tag-line
+						padding-top: 35px
+						h2
+							font-size: 11px
+		#learn-more
+			h3
+				font-size: 11px
+				
+@media screen and (min-width: 1024px)
 	header
+		min-height: 550px
 		background-image: url("../images/bg_1920.jpg")
 		main
-			height: calc(100vh - 200px)
-			padding: 200px 0 0 0
+			top: 150px
 			#title
 				height: 300px
 				#title-anchor
-					h1	
-						font-size: 40px			
-			#tag-line
-				padding-top: 35px
-				h2	
-					font-size: 12px
-				#line-breaker
-					width: 300px
-					margin: 10px auto		
-			#learn-more	
-				h3
-					font-size: 12px
+					h1
+						font-size: 40px
+					#tag-line
+						padding-top: 50px
+						h2
+							font-size: 12px
+						#line-breaker
+							width: 320px
+		#learn-more
+			bottom: 75px
+			h3
+				font-size: 12px
 
 @media screen and (min-width: 1400px)
 	header
+		min-height: 750px
+		background-image: url("../images/bg_1920.jpg")
 		main
-			width: 1120px
 			#title
 				width: 1120px
 				height: 360px
 				#title-anchor
-					h1	
-						font-size: 55px			
-			#tag-line
-				padding-top: 60px
-				h2	
-					font-size: 13px
-				#line-breaker
-					width: 350px	
-			#learn-more	
-				width: 1120px
-				h3
-					font-size: 13px
- 
+					h1
+						font-size: 55px
+					#tag-line
+						padding-top: 75px
+						h2
+							font-size: 13px
+		#learn-more			
+			h3
+				font-size: 13px
+
 @media screen and (min-width: 1921px)
 	header
 		background-image: url("../images/bg_3800.jpg")
+		main
+			top: 250px
+		#learn-more
+			bottom: 120px
