--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -24,6 +24,9 @@ body, html
 	margin: 0
 	font-family: Esphimere
 
+body
+	overflow-y: scroll
+	
 h1, h2, h3
 	margin: 0
 	font-size: 100%
